// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Social component should render with connected 1`] = `
<View>
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    fontWeight="extrabold"
    margin={null}
    numberOfLines={null}
    text="lbl_prefrence_social_account"
    textDecoration={null}
  />
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-bottom-XXL margin-left-XXS margin-top-SM"
    text="lbl_prefrence_social_text"
    textDecoration={null}
  />
  <Styled(View)
    spacingStyles="margin-bottom-XL margin-left-XXS margin-right-XXS"
  >
    <Styled(View)>
      <Styled(ImageComp)
        alt=""
        height={50}
        host=""
        source={
          Object {
            "testUri": "../../../../core/src/assets/facebook_share.png",
          }
        }
        url=""
        width={50}
      />
      <Styled(Styled(BodyCopy))
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        margin={null}
        numberOfLines={null}
        spacingStyles="margin-left-MED margin-right-LRG"
        text="Facebook lbl_prefrence_connected"
        textDecoration={null}
      />
      <TouchableOpacity
        accessibilityLabel="button"
        accessibilityRole="button"
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Styled(ImageComp)
          alt=""
          height={15}
          host=""
          source={
            Object {
              "testUri": "../../../../core/src/assets/close.png",
            }
          }
          url=""
          width={15}
        />
      </TouchableOpacity>
    </Styled(View)>
  </Styled(View)>
</View>
`;

exports[`Social component should renders correctly 1`] = `
<View>
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    fontWeight="extrabold"
    margin={null}
    numberOfLines={null}
    text="lbl_prefrence_social_account"
    textDecoration={null}
  />
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-bottom-XXL margin-left-XXS margin-top-SM"
    text="lbl_prefrence_social_text"
    textDecoration={null}
  />
  <Styled(View)
    spacingStyles="margin-bottom-XL margin-left-XXS margin-right-XXS"
  >
    <Styled(View)>
      <Styled(ImageComp)
        alt=""
        height={50}
        host=""
        source={
          Object {
            "testUri": "../../../../core/src/assets/facebook_fade.png",
          }
        }
        url=""
        width={50}
      />
      <Styled(Styled(BodyCopy))
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        margin={null}
        numberOfLines={null}
        spacingStyles="margin-left-MED margin-right-LRG"
        text="lbl_prefrence_connectTo Facebook"
        textDecoration={null}
      />
      <TouchableOpacity
        accessibilityLabel="button"
        accessibilityRole="button"
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Styled(ImageComp)
          alt=""
          height={15}
          host=""
          source={
            Object {
              "testUri": "../../../../core/src/assets/plus.png",
            }
          }
          url=""
          width={15}
        />
      </TouchableOpacity>
    </Styled(View)>
  </Styled(View)>
</View>
`;

exports[`Social component should simulate facebook connect 1`] = `
<View>
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    fontWeight="extrabold"
    margin={null}
    numberOfLines={null}
    text="lbl_prefrence_social_account"
    textDecoration={null}
  />
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    dataLocator=""
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-bottom-XXL margin-left-XXS margin-top-SM"
    text="lbl_prefrence_social_text"
    textDecoration={null}
  />
  <Styled(View)
    spacingStyles="margin-bottom-XL margin-left-XXS margin-right-XXS"
  >
    <Styled(View)>
      <Styled(ImageComp)
        alt=""
        height={50}
        host=""
        source={
          Object {
            "testUri": "../../../src/assets/images/facebook_fade.png",
          }
        }
        url=""
        width={50}
      />
      <Styled(Styled(BodyCopy))
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        margin={null}
        numberOfLines={null}
        spacingStyles="margin-left-MED margin-right-LRG"
        text="undefined Facebook"
        textDecoration={null}
      />
      <TouchableOpacity
        accessibilityLabel="button"
        accessibilityRole="button"
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Styled(ImageComp)
          alt=""
          height={15}
          host=""
          source={
            Object {
              "testUri": "../../../src/assets/images/plus.png",
            }
          }
          url=""
          width={15}
        />
      </TouchableOpacity>
    </Styled(View)>
  </Styled(View)>
</View>
`;
